infrastructure/oci-tasker/tasker-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tasker-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: tasker-app-svc
              port:
                number: 3000
        - path: /task
          pathType: Prefix
          backend:
            service:
              name: tasker-api-svc
              port:
                number: 8080
